# ProjCL

./: .gitignore  .travis.yml  CMakeLists.txt  GNUMakefile  LICENSE  Makefile  README.md  TODO
.github/scripts/: install-opencl.sh  install-proj4.sh
.github/workflows/: build.yml
.travis/: install-opencl.sh  install-proj4.sh  install.sh
cmake/modules/: FindCBLAS.cmake  FindProj4.cmake
include/projcl/: projcl.h  projcl_types.h  projcl_warp.h
kernel/: peel.opencl  pl_datum.opencl  pl_geodesic.opencl  pl_project_albers_equal_area.opencl  pl_project_american_polyconic.opencl  pl_project_lambert_azimuthal_equal_area.opencl  pl_project_lambert_conformal_conic.opencl  pl_project_mercator.opencl  pl_project_oblique_stereographic.opencl  pl_project_robinson.opencl  pl_project_transverse_mercator.opencl  pl_project_winkel_tripel.opencl  pl_sample_bicubic.opencl  pl_sample_linear.opencl  pl_sample_nearest.opencl  pl_sample_quasi_bicubic.opencl  pl_warp.opencl
src/: CMakeLists.txt  projcl.c  projcl.h  projcl_datum.c  projcl_geodesic.c  projcl_kernel.c  projcl_kernel.h  projcl_params.c  projcl_project.c  projcl_run.c  projcl_run.h  projcl_spheroid.c  projcl_spheroid.h  projcl_types.h  projcl_util.c  projcl_util.h  projcl_warp.c  projcl_warp.h
test/: CMakeLists.txt  projcl_test.c
